feature: Temporarily disable stable GPU deploy to tanzania.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -360,22 +360,22 @@ stable:deploy:cpu:
     - echo "Deploying CPU stable version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
     - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-stable.nomad
 
-stable:deploy:gpu:
-  stage: stable-deploy
-  image: docker.registry.verbio.com/cognitive/nomad:1.0.2
-  only:
-    - tags
-  dependencies:
-    - build:python
-  environment:
-    name: production/asr4-gpu
-    action: start
-  script:
-    - cd deploy/nomad
-    - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
-    - export NOMAD_ADDR=http://$NOMAD_IP:4646
-    - echo "Deploying GPU stable version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
-    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-stable-gpu.nomad
+#stable:deploy:gpu:
+#  stage: stable-deploy
+#  image: docker.registry.verbio.com/cognitive/nomad:1.0.2
+#  only:
+#    - tags
+#  dependencies:
+#    - build:python
+#  environment:
+#    name: production/asr4-gpu
+#    action: start
+#  script:
+#    - cd deploy/nomad
+#    - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
+#    - export NOMAD_ADDR=http://$NOMAD_IP:4646
+#    - echo "Deploying GPU stable version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
+#    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-stable-gpu.nomad
 
 
 
