--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,8 @@ dmypy.json
 .pyre/
 
 # Proto files
+proto/generated/recognition_pb2_grpc.py               
+proto/generated/recognition_pb2.py               
 proto/generated/recognition_streaming_pb2.py               
 proto/generated/recognition_streaming_response_pb2_grpc.py
 proto/generated/verbio_speech_center_recognizer_pb2.py
