--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -3,6 +3,7 @@ FROM docker.registry.verbio.com/engineering/devops/python:3.9-slim
 ARG VERSION
 ARG LANGUAGE
 ENV WORKERS=${WORKERS}
+ENV PORT=${PORT}
 
 RUN apt update && apt install -y libgomp1
 
