--- a/deploy/docker/Dockerfile.debian-gpu
+++ b/deploy/docker/Dockerfile.debian-gpu
@@ -1,7 +1,9 @@
 FROM docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust-torch-gpu:latest
 
-ARG VERSION=0.0.1
-ARG LANGUAGE=en-us
+ARG VERSION
+ARG LANGUAGE
+ENV WORKERS=${WORKERS}
+ENV PORT=${PORT}
 
 RUN apt-get update && apt-get install -y git build-essential ninja-build cmake
 
@@ -13,6 +15,7 @@ COPY asr4-$LANGUAGE-$VERSION.dict.ltr.txt /dict.ltr.txt
 COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 
 ENV MAKEFLAGS="-j4"
+ENV LANGUAGE=${LANGUAGE}
 ENV LOG_LEVEL=${LOG_LEVEL}
 
 RUN CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install asr4-$VERSION-py3-none-any.whl[server,gpu]
