--- a/deploy/docker/Dockerfile.debian-gpu
+++ b/deploy/docker/Dockerfile.debian-gpu
@@ -1,4 +1,5 @@
-FROM docker.registry.verbio.com/engineering/devops/python:3.9-slim
+#FROM docker.registry.verbio.com/engineering/devops/python:3.9-slim
+FROM docker.registry.verbio.com/engineering/devops/debian10-intel-oneapi-python-cuda-tensorrt:3.9
 
 ARG VERSION
 ARG LANGUAGE
@@ -19,7 +20,7 @@ ENV MAKEFLAGS="-j4"
 ENV LANGUAGE=${LANGUAGE}
 ENV LOG_LEVEL=${LOG_LEVEL}
 
-RUN python -m pip install nvidia-tensorrt
+#RUN python -m pip install nvidia-tensorrt
 RUN python -m pip install asr4-$VERSION-py3-none-any.whl[server,gpu]
 RUN python -m pip uninstall cmake ninja -y
 
