--- a/deploy/docker/Dockerfile.debian-gpu
+++ b/deploy/docker/Dockerfile.debian-gpu
@@ -1,5 +1,4 @@
-#FROM docker.registry.verbio.com/engineering/devops/python:3.9-slim
-FROM docker.registry.verbio.com/engineering/devops/debian10-intel-oneapi-python-cuda-tensorrt:3.9
+FROM docker.registry.verbio.com/engineering/devops/python-gpu:3.9-slim
 
 ARG VERSION
 ARG LANGUAGE
