--- a/deploy/docker/Dockerfile.debian-gpu
+++ b/deploy/docker/Dockerfile.debian-gpu
@@ -19,8 +19,9 @@ COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 ENV MAKEFLAGS="-j4"
 ENV LANGUAGE=${LANGUAGE}
 ENV LOG_LEVEL=${LOG_LEVEL}
+ENV ASR4_VERSION=${VERSION}
 
-RUN . /opt/intel/oneapi/setvars.sh && python -m pip install asr4-$VERSION-py3-none-any.whl[server,gpu]
+RUN . /opt/intel/oneapi/setvars.sh && python -m pip install asr4-${ASR4_VERSION}-py3-none-any.whl[server,gpu]
 RUN . /opt/intel/oneapi/setvars.sh && python -m pip uninstall cmake ninja -y
 
 CMD [ "/init.sh"]
