--- a/deploy/docker/Dockerfile.base
+++ b/deploy/docker/Dockerfile.base
@@ -1,4 +1,5 @@
-FROM docker.registry.verbio.com/engineering/devops/debian10-intel-oneapi-python:3.9
+ARG PYTHON_VERSION=3.9
+FROM docker.registry.verbio.com/engineering/devops/debian10-intel-oneapi-python:${PYTHON_VERSION}
 
 # Install CUDA 11.7.0
 
@@ -19,9 +20,11 @@ RUN mkdir cudnn && \
 
 COPY TensorRT-8.5.1.7.Linux.x86_64-gnu.cuda-11.8.cudnn8.6.tar.gz /
 
+ARG PYTHON_VERSION
+
 RUN . /opt/intel/oneapi/setvars.sh && \
     tar xzvf TensorRT-8.5.1.7.Linux.x86_64-gnu.cuda-11.8.cudnn8.6.tar.gz && \
-    python -m pip install TensorRT-8.5.1.7/python/tensorrt-8.5.1.7-cp39-none-linux_x86_64.whl && \
+    python -m pip install TensorRT-8.5.1.7/python/tensorrt-8.5.1.7-cp$(echo ${PYTHON_VERSION} | tr -d '.')-none-linux_x86_64.whl && \
     mv TensorRT-8.5.1.7/targets/x86_64-linux-gnu/bin/* /bin/ && \
     mv TensorRT-8.5.1.7/targets/x86_64-linux-gnu/lib/* /usr/lib/x86_64-linux-gnu/ && \
     mv TensorRT-8.5.1.7/targets/x86_64-linux-gnu/include/Nv* /usr/local/include/ && \
