--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,8 +91,8 @@ functional-testing:endpoints:
     - tar -xzf ghz-linux-x86_64.tar.gz
     - mv ghz /bin
     - pip install .[client,server,cpu,test]
-    - export VERSION=$(cat VERSION | xargs echo -n)
-    - bash tests/integration/launch_server.sh ${MODELS_PATH}/asr4-en-us-${VERSION}.onnx ${MODELS_PATH}/asr4-en-us-${VERSION}.dict.ltr.txt ${MODELS_PATH}/formatter/ en-us
+    - export MODEL_VERSION=$(cat MODELS_VERSION | grep en-us:cpu | awk '/1/ -F " " {print $2}')
+    - bash tests/integration/launch_server.sh ${MODELS_PATH}/asr4-en-us-${MODEL_VERSION}.onnx ${MODELS_PATH}/asr4-en-us-${MODEL_VERSION}.dict.ltr.txt ${MODELS_PATH}/formatter/ en-us
   script:
     - cd tests/functional/data
     - bash ../streaming_tests.sh
@@ -114,8 +114,8 @@ integration-testing:cpu:
     - master
   before_script:
     - pip install .[client,server,cpu,test]
-    - export VERSION=$(cat VERSION | xargs echo -n)
-    - bash tests/integration/launch_server.sh ${MODELS_PATH}/asr4-${LANGUAGE}-${VERSION}.onnx ${MODELS_PATH}/asr4-${LANGUAGE}-${VERSION}.dict.ltr.txt ${MODELS_PATH}/formatter/ $LANGUAGE 0
+    - export MODEL_VERSION=$(cat MODELS_VERSION | grep ${LANGUAGE}:cpu | awk '/1/ -F " " {print $2}')
+    - bash tests/integration/launch_server.sh ${MODELS_PATH}/asr4-${LANGUAGE}-${MODEL_VERSION}.onnx ${MODELS_PATH}/asr4-${LANGUAGE}-${MODEL_VERSION}.dict.ltr.txt ${MODELS_PATH}/formatter/ $LANGUAGE 0
     # Install the remaining testing dependencies
     - !reference [.template:integration-testing, before_script]
 
@@ -130,12 +130,11 @@ integration-testing:gpu:
     - master
   tags:
     - gpu
-  allow_failure: true
   before_script:
     - . /opt/intel/oneapi/setvars.sh
     - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/intelpython/python3.9/lib/ -liomp5" pip install .[client,server,gpu,test]
-    - export VERSION=$(cat VERSION | xargs echo -n)
-    - bash tests/integration/launch_server.sh ${MODELS_PATH}/asr4-${LANGUAGE}-${VERSION}.onnx ${MODELS_PATH}/asr4-${LANGUAGE}-${VERSION}.dict.ltr.txt ${MODELS_PATH}/formatter/ $LANGUAGE 1
+    - export MODEL_VERSION=$(cat MODELS_VERSION | grep ${LANGUAGE}:gpu | awk '/1/ -F " " {print $2}')
+    - bash tests/integration/launch_server.sh ${MODELS_PATH}/asr4-${LANGUAGE}-${MODEL_VERSION}.onnx ${MODELS_PATH}/asr4-${LANGUAGE}-${MODEL_VERSION}.dict.ltr.txt ${MODELS_PATH}/formatter/ $LANGUAGE 1
     - wget -O - https://pkg-repos.lan.verbio.com/gpg/internal/deb/F2EACE0B.gpg.key | apt-key add -
     - echo 'deb https://pkg-repos.lan.verbio.com/deb/internal jessie stable' | tee /etc/apt/sources.list.d/verbio-internal.list
     # Install the remaining testing dependencies
@@ -187,11 +186,13 @@ testing:promote:cpu:
   variables:
     IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DOCKERFILE: "Dockerfile.debian"
+    DEVICE: "cpu"
   extends: .template_docker_build
 
 testing:promote:gpu:
   variables:
     IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    DEVICE: "gpu"
     DOCKERFILE: "Dockerfile.debian-gpu"
   extends: .template_docker_build
 
@@ -206,14 +207,16 @@ testing:promote:gpu:
       - LANGUAGE: [en-us, es, pt-br]
   script:
     - echo "IMAGE_NAME=${IMAGE_NAME}"
+    - export MODEL_VERSION=$(cat MODELS_VERSION | grep ${LANGUAGE}:${DEVICE} | awk '/1/ -F " " {print $2}')
     - mv *.whl deploy/docker/
-    - cp ${MODELS_PATH}/asr4-${LANGUAGE}-${DOCKER_IMAGE_VERSION}.onnx deploy/docker/
-    - cp ${MODELS_PATH}/asr4-${LANGUAGE}-${DOCKER_IMAGE_VERSION}.dict.ltr.txt deploy/docker/
+    - cp ${MODELS_PATH}/asr4-${LANGUAGE}-${MODEL_VERSION}.onnx deploy/docker/
+    - cp ${MODELS_PATH}/asr4-${LANGUAGE}-${MODEL_VERSION}.dict.ltr.txt deploy/docker/
     - cp ${MODELS_PATH}/formatter/format-model.${LANGUAGE}* deploy/docker/
     - cp bin/server.py deploy/docker/
     - cd deploy/docker/
     - docker build . -f ${DOCKERFILE} --build-arg VERSION=${DOCKER_IMAGE_VERSION} --build-arg LANGUAGE=${LANGUAGE} -t "${IMAGE_NAME}"
     - docker push "${IMAGE_NAME}"
+
 
 
 testing:integration-testing:cpu:
@@ -229,6 +232,7 @@ testing:integration-testing:gpu:
   extends: .template:integration-testing
   tags:
     - gpu
+  allow_failure: true
   before_script:
     # Install docker to run ASR4 server docker
     - !reference [.install-docker, before_script]
