--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -1,5 +1,6 @@
 FROM docker.registry.verbio.com/engineering/devops/python:3.9-slim
 
+ARG MODEL_VERSION
 ARG VERSION
 ARG LANGUAGE
 ENV WORKERS=${WORKERS}
@@ -10,8 +11,8 @@ RUN apt update && apt install -y libgomp1
 COPY init.sh /init.sh
 COPY server.py /server.py
 COPY asr4-$VERSION-py3-none-any.whl /asr4-$VERSION-py3-none-any.whl
-COPY asr4-$LANGUAGE-$VERSION.onnx /asr4-$LANGUAGE.onnx
-COPY asr4-$LANGUAGE-$VERSION.dict.ltr.txt /dict.ltr.txt
+COPY asr4-$LANGUAGE-$MODEL_VERSION.onnx /asr4-$LANGUAGE.onnx
+COPY asr4-$LANGUAGE-$MODEL_VERSION.dict.ltr.txt /dict.ltr.txt
 COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 
 RUN pip install asr4-$VERSION-py3-none-any.whl[server,cpu]
