--- a/deploy/docker/Dockerfile.debian-gpu
+++ b/deploy/docker/Dockerfile.debian-gpu
@@ -1,26 +1,32 @@
 FROM docker.registry.verbio.com/engineering/devops/python-gpu:3.9-slim
 
-ARG MODEL_VERSION
-ARG VERSION
+RUN apt-get update && apt-get install -y libgomp1 && apt-get clean
+
 ARG LANGUAGE
-ENV WORKERS=${WORKERS}
-ENV PORT=${PORT}
-
-RUN apt update && apt install -y libgomp1
-
-COPY init-gpu.sh /init.sh
-COPY server.py /server.py
-COPY asr4-$VERSION-py3-none-any.whl /asr4-$VERSION-py3-none-any.whl
-COPY asr4-$LANGUAGE-$MODEL_VERSION.onnx /asr4-$LANGUAGE.onnx
-COPY asr4-$LANGUAGE-$MODEL_VERSION.dict.ltr.txt /dict.ltr.txt
 COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 
+ARG MODEL_VERSION
+COPY asr4-$LANGUAGE-$MODEL_VERSION.onnx /asr4-$LANGUAGE.onnx
+COPY asr4-$LANGUAGE-$MODEL_VERSION.dict.ltr.txt /dict.ltr.txt
 
+ARG VERSION
+COPY asr4-$VERSION-py3-none-any.whl /asr4-$VERSION-py3-none-any.whl
+RUN python -m pip install --no-cache-dir asr4-$VERSION-py3-none-any.whl[server,gpu]
+RUN python -m pip uninstall cmake ninja -y && pip cache purge && rm /tmp/*
+
+COPY server.py /server.py
+COPY init-gpu.sh /init.sh
+
+ENV WORKERS=${WORKERS}
+ENV PORT=${PORT}
 ENV MAKEFLAGS="-j4"
 ENV LANGUAGE=${LANGUAGE}
 ENV LOG_LEVEL=${LOG_LEVEL}
 
-RUN python -m pip install asr4-${VERSION}-py3-none-any.whl[server,gpu]
-RUN python -m pip uninstall cmake ninja -y
+LABEL vendor="Verbio Technologies"
+LABEL model_version=${MODEL_VERSION}
+LABEL service_version=${VERSION}
+LABEL language=${LANGUAGE}
+LABEL flags="LOG_LEVEL${LOG_LEVEL}, WORKERS=${WORKERS}"
 
 CMD [ "/init.sh"]
