--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -197,19 +197,42 @@ build:rust:
 
 
 
-testing:promote:cpu:
+testing:build:cpu:
   variables:
     IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DOCKERFILE: "Dockerfile.debian"
     DEVICE: "cpu"
   extends: .template_docker_build
+  only:
+    - merges
 
-testing:promote:gpu:
+testing:build:gpu:
   variables:
     IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DEVICE: "gpu"
     DOCKERFILE: "Dockerfile.debian-gpu"
   extends: .template_docker_build
+  only:
+    - merges
+
+testing:release:cpu:
+  variables:
+    IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    DOCKERFILE: "Dockerfile.debian"
+    DEVICE: "cpu"
+  extends: .template_docker_deploy
+  only:
+    - tags
+
+testing:release:gpu:
+  variables:
+    IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+    DEVICE: "gpu"
+    DOCKERFILE: "Dockerfile.debian-gpu"
+  extends: .template_docker_deploy
+  only: 
+    - tags
+
 
 .template_docker_build:
   stage: testing-promote
@@ -220,7 +243,7 @@ testing:promote:gpu:
   parallel:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
-  script:
+  before_script:
     - echo "IMAGE_NAME=${IMAGE_NAME}"
     - export MODEL_VERSION=$(cat MODELS_VERSION | grep ${LANGUAGE}:${DEVICE} | awk '/1/ -F " " {print $2}')
     - echo ${MODEL_VERSION}
@@ -231,9 +254,15 @@ testing:promote:gpu:
     - cp ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt deploy/docker/
     - cp ${MODELS_PATH}/formatter/format-model.${LANGUAGE}* deploy/docker/
     - cp bin/server.py deploy/docker/
-    - cd deploy/docker/
-    - docker build . -f ${DOCKERFILE} --build-arg MODEL_VERSION=${MODEL_VERSION} --build-arg VERSION=${DOCKER_IMAGE_VERSION} --build-arg LANGUAGE=${LANGUAGE} -t "${IMAGE_NAME}"
-    - docker push "${IMAGE_NAME}"
+  script:
+    - docker build --pull deploy/docker/ -f deploy/docker/${DOCKERFILE} --build-arg MODEL_VERSION=${MODEL_VERSION} --build-arg VERSION=${DOCKER_IMAGE_VERSION} --build-arg LANGUAGE=${LANGUAGE} -t "${IMAGE_NAME}"
+    
+.template_docker_deploy:
+    extends:
+      - .template_docker_build
+    after_script:
+      - docker push "${IMAGE_NAME}"
+    
 
 
 
